completed FE stage 1 task

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
           <h2 data-testid="test-user-name" class="profile-name">
             Segun David Olasunkanmi
           </h2>
+          <ul class="profile-info-nav">
+            <li><a href="./pages/about.html">About me</a></li>
+            <li><a href="./pages/contact.html">Contact me</a></li>
+          </ul>
           <p data-testid="test-user-bio" class="profile-bio">
             Frontend developer passionate about building accessible and
             responsive web applications. Always learning new technologies and
